load, save, delete topic added
