# data-service-backend/src/main/java/ch/akros/marketplace/controller/LoadTopicController.java
@@ -1,0 +1,33 @@
+package ch.akros.marketplace.controller;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.RestController;
+
+import ch.akros.marketplace.api.LoadTopicApi;
+import ch.akros.marketplace.api.model.TopicLoadDTO;
+import ch.akros.marketplace.service.TopicService;
+import lombok.extern.slf4j.Slf4j;
+
+@RestController
+@CrossOrigin(origins = "*", allowedHeaders = "*")
+@Slf4j
+public class LoadTopicController implements LoadTopicApi {
+	@Autowired
+	private TopicService topicService;
+
+	@Override
+	public ResponseEntity<TopicLoadDTO> loadTopicTopicIdGet(Long topicId) {
+		try {
+			log.debug("SaveTopicController.saveTopicPost() called");
+
+			TopicLoadDTO topic = topicService.loadTopic(topicId);
+			return ResponseEntity.status(HttpStatus.OK).body(topic);
+		} catch (Exception ex) {
+			log.error(ex.getMessage(), ex);
+			return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
+		}
+	}
+}
