# data-service-backend/src/main/java/ch/akros/marketplace/entity/Topic.java
@@ -38,12 +38,12 @@ public class Topic {
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
 	private Long topicId;
 
-	@ManyToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(referencedColumnName = "ADVERTISER_ID", name = "ADVERTISER_ID", foreignKey = @ForeignKey(name = "TOPIC_ADVERTISER_FK"))
 	@ToString.Exclude
 	private Advertiser advertiser;
 
-	@ManyToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(referencedColumnName = "THEME_ID", name = "THEME_ID", foreignKey = @ForeignKey(name = "TOPIC_THEME_FK"))
 	@ToString.Exclude
 	private Theme theme;
@@ -54,7 +54,7 @@ public class Topic {
 	@Column(name = "VALID_TO")
 	private LocalDate validTo;
 
-	@OneToMany(mappedBy = "topicValueId", cascade = CascadeType.ALL)
+	@OneToMany(mappedBy = "topic", cascade = CascadeType.ALL)
 	private List<TopicValue> topicValues;
 
 	@Column(name = "SEARCH_OR_OFFER")
