# data-service-backend/src/main/java/ch/akros/marketplace/entity/TopicValue.java
@@ -2,7 +2,6 @@ package ch.akros.marketplace.entity;
 
 import java.time.LocalDate;
 
-import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.FetchType;
@@ -36,17 +35,17 @@ public class TopicValue {
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
 	private Long topicValueId;
 
-	@ManyToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(referencedColumnName = "TOPIC_ID", name = "TOPIC_ID", foreignKey = @ForeignKey(name = "TOPIC_VALUE_TOPIC_FK"))
 	@ToString.Exclude
 	private Topic topic;
 
-	@ManyToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(referencedColumnName = "THEME_ID", name = "THEME_ID", foreignKey = @ForeignKey(name = "TOPIC_VALUE_THEME_FK"))
 	@ToString.Exclude
 	private Theme theme;
 
-	@ManyToOne(fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(referencedColumnName = "FIELD_TYPE_ID", name = "FIELD_TYPE_ID", foreignKey = @ForeignKey(name = "TOPIC_VALUE_FIELD_TYPE_FK"))
 	@ToString.Exclude
 	private FieldType fieldType;
@@ -59,4 +58,7 @@ public class TopicValue {
 
 	@Column(name = "VALUE_DATE")
 	private LocalDate valueDate;
+
+	@Column(name = "VALUE_BOOLEAN")
+	private Boolean valueBoolean;
 }
